--- a/README.org
+++ b/README.org
@@ -1,11 +1,13 @@
-# Inspired by: https://github.com/othneildrew/Best-README-Template -->
+# Inspired by: https://github.com/othneildrew/Best-README-Template
 #+OPTIONS: toc:nil
 
-[[https://github.com/MArpogaus/tensorflow_timeseries_dataset/graphs/contributors][https://img.shields.io/github/contributors/MArpogaus/tensorflow_timeseries_dataset.svg?style=flat-square]]
-[[https://github.com/MArpogaus/tensorflow_timeseries_dataset/network/members][https://img.shields.io/github/forks/MArpogaus/tensorflow_timeseries_dataset.svg?style=flat-square]]
-[[https://github.com/MArpogaus/tensorflow_timeseries_dataset/stargazers][https://img.shields.io/github/stars/MArpogaus/tensorflow_timeseries_dataset.svg?style=flat-square]]
-[[https://github.com/MArpogaus/tensorflow_timeseries_dataset/issues][https://img.shields.io/github/issues/MArpogaus/tensorflow_timeseries_dataset.svg?style=flat-square]]
-[[https://github.com/MArpogaus/tensorflow_timeseries_dataset/blob/master/LICENSE][https://img.shields.io/github/license/MArpogaus/tensorflow_timeseries_dataset.svg?style=flat-square]]
+[[https://github.com/MArpogaus/tensorflow-timeseries-dataset/graphs/contributors][https://img.shields.io/github/contributors/MArpogaus/tensorflow-timeseries-dataset.svg?style=flat-square]]
+[[https://github.com/MArpogaus/tensorflow-timeseries-dataset/network/members][https://img.shields.io/github/forks/MArpogaus/tensorflow-timeseries-dataset.svg?style=flat-square]]
+[[https://github.com/MArpogaus/tensorflow-timeseries-dataset/stargazers][https://img.shields.io/github/stars/MArpogaus/tensorflow-timeseries-dataset.svg?style=flat-square]]
+[[https://github.com/MArpogaus/tensorflow-timeseries-dataset/issues][https://img.shields.io/github/issues/MArpogaus/tensorflow-timeseries-dataset.svg?style=flat-square]]
+[[https://github.com/MArpogaus/tensorflow-timeseries-dataset/blob/main/LICENSE][https://img.shields.io/github/license/MArpogaus/tensorflow-timeseries-dataset.svg?style=flat-square]]
+[[https://github.com/MArpogaus/tensorflow-timeseries-dataset/actions/workflows/test.yaml][https://img.shields.io/github/actions/workflow/status/MArpogaus/tensorflow-timeseries-dataset/test.yaml.svg?label=test&style=flat-square]]
+[[https://github.com/MArpogaus/tensorflow-timeseries-dataset/blob/main/.pre-commit-config.yaml][https://img.shields.io/badge/pre--commit-enabled-brightgreen.svg?logo=pre-commit&style=flat-square]]
 [[https://linkedin.com/in/MArpogaus][https://img.shields.io/badge/-LinkedIn-black.svg?style=flat-square&logo=linkedin&colorB=555]]
 
 * TensorFlow time-series Dataset
@@ -27,25 +29,19 @@ project locally. To get a local copy up and running follow these simple
 example steps.
 
 *** Prerequisites
-    :PROPERTIES:
-    :CUSTOM_ID: prerequisites
-    :END:
 
   - tensorflow>=2.5.*
   - pandas>=1.3.*
   - matplotlib>=3.6.2
 
 *** Installation
-    :PROPERTIES:
-    :CUSTOM_ID: installation
-    :END:
 
-    pip install git+https://github.com/MArpogaus/tensorflow_timeseries_dataset.git
+#+begin_src bash
+pip install git+https://github.com/MArpogaus/tensorflow-timeseries-dataset.git
+#+end_src
 
 ** Usage
-   :PROPERTIES:
-   :CUSTOM_ID: usage
-   :END:
+
 *** Example Data
 Suppose you have a dataset in the following form:
 
@@ -131,6 +127,7 @@ fname
 
 #+RESULTS: ds1_plot
 [[file:.images/example1.png]]
+
 *** Multi-Step Prediction
 Lets now increase the prediction size to =6= half-hour time-steps.
 #+Name: ds2
@@ -213,23 +210,22 @@ fname
 #+RESULTS: ds3_plot
 [[file:.images/example3.png]]
 
+** Contributing
+
+Any Contributions are greatly appreciated! If you have a question, an issue or would like to contribute, please read our [[file:CONTRIBUTING.md][contributing guidelines]].
+
+
 ** License
-   :PROPERTIES:
-   :CUSTOM_ID: license
-   :END:
+
 Distributed under the [[file:LICENSE][Apache License 2.0]]
 
 ** Contact
-   :PROPERTIES:
-   :CUSTOM_ID: contact
-   :END:
+
 [[https://github.com/marpogaus][Marcel Arpogaus]] - [[mailto:marcel.arpogaus@gmail.com][marcel.arpogaus@gmail.com]]
 
 Project Link:
-[[https://github.com/MArpogaus/tensorflow_timeseries_dataset]]
+[[https://github.com/MArpogaus/tensorflow-timeseries-dataset]]
 
 ** Acknowledgments
-   :PROPERTIES:
-   :CUSTOM_ID: acknowledgments
-   :END:
+
 Parts of this work have been funded by the Federal Ministry for the Environment, Nature Conservation and Nuclear Safety due to a decision of the German Federal Parliament (AI4Grids: 67KI2012A).
